--- a/archives/toutiao-search/2024-04-23.md
+++ b/archives/toutiao-search/2024-04-23.md
@@ -1,59 +1,71 @@
 # 2024-04-23
 
-共 355 条
+共 361 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 23 2024 21:05:10 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 23 2024 22:00:54 GMT+0800 (China Standard Time) -->
+1. [深圳龙华城管回应“暴雨天浇花”](https://so.toutiao.com/search?keyword=深圳龙华城管回应“暴雨天浇花”)
 1. [失踪多日南充女教师已找到](https://so.toutiao.com/search?keyword=失踪多日南充女教师已找到)
-1. [工作人员输错号让彩民中800万](https://so.toutiao.com/search?keyword=工作人员输错号让彩民中800万)
 1. [这些家乡舰“回家”了](https://so.toutiao.com/search?keyword=这些家乡舰“回家”了)
-1. [山西26死火灾事故42名公职人员被问责](https://so.toutiao.com/search?keyword=山西26死火灾事故42名公职人员被问责)
-1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
+1. [美国要制裁中国金融机构？中方回应](https://so.toutiao.com/search?keyword=美国要制裁中国金融机构？中方回应)
+1. [工作人员输错号让彩民中800万](https://so.toutiao.com/search?keyword=工作人员输错号让彩民中800万)
 1. [干部阻挠农民种地让交钱被免职](https://so.toutiao.com/search?keyword=干部阻挠农民种地让交钱被免职)
 1. [律师：镇政府干预土地承包严重违法](https://so.toutiao.com/search?keyword=律师：镇政府干预土地承包严重违法)
-1. [深圳龙华城管回应“暴雨天浇花”](https://so.toutiao.com/search?keyword=深圳龙华城管回应“暴雨天浇花”)
-1. [美国要制裁中国金融机构？中方回应](https://so.toutiao.com/search?keyword=美国要制裁中国金融机构？中方回应)
 1. [央媒：禁止宿舍挂床帘有懒政之嫌](https://so.toutiao.com/search?keyword=央媒：禁止宿舍挂床帘有懒政之嫌)
-1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
+1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
+1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
+1. [新款广汽丰田赛那上市](https://so.toutiao.com/search?keyword=新款广汽丰田赛那上市)
 1. [广东辟谣绥江河原水水源不足](https://so.toutiao.com/search?keyword=广东辟谣绥江河原水水源不足)
-1. [城管局回应大雨天一绿化车洒水浇树](https://so.toutiao.com/search?keyword=城管局回应大雨天一绿化车洒水浇树)
-1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
+1. [女中学生为逃霸凌割喉求生 警方回应](https://so.toutiao.com/search?keyword=女中学生为逃霸凌割喉求生+警方回应)
 1. [主播小团团或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播小团团或面临3至5年刑期)
-1. [深圳暴雨街道被淹](https://so.toutiao.com/search?keyword=深圳暴雨街道被淹)
-1. [一年不到二度访华 布林肯为何而来](https://so.toutiao.com/search?keyword=一年不到二度访华+布林肯为何而来)
-1. [深圳有小区二手房降价60%](https://so.toutiao.com/search?keyword=深圳有小区二手房降价60%)
-1. [周鸿祎吐槽库里南性价比低](https://so.toutiao.com/search?keyword=周鸿祎吐槽库里南性价比低)
-1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
+1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
+1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
+1. [山西26死火灾事故42名公职人员被问责](https://so.toutiao.com/search?keyword=山西26死火灾事故42名公职人员被问责)
+1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [城管局回应大雨天一绿化车洒水浇树](https://so.toutiao.com/search?keyword=城管局回应大雨天一绿化车洒水浇树)
+1. [大四男生每天花4小时读纸质书](https://so.toutiao.com/search?keyword=大四男生每天花4小时读纸质书)
 1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
+1. [一年不到二度访华 布林肯为何而来](https://so.toutiao.com/search?keyword=一年不到二度访华+布林肯为何而来)
+1. [深圳暴雨街道被淹](https://so.toutiao.com/search?keyword=深圳暴雨街道被淹)
+1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
+1. [布林肯将访华 美国的诚意到底在哪](https://so.toutiao.com/search?keyword=布林肯将访华+美国的诚意到底在哪)
+1. [深圳有小区二手房降价60%](https://so.toutiao.com/search?keyword=深圳有小区二手房降价60%)
+1. [王心凌长沙演唱会4月25日开票](https://so.toutiao.com/search?keyword=王心凌长沙演唱会4月25日开票)
+1. [西湖边交警小姐姐温柔劝导路人](https://so.toutiao.com/search?keyword=西湖边交警小姐姐温柔劝导路人)
 1. [深圳天空一秒变黑 网友称像半夜加班](https://so.toutiao.com/search?keyword=深圳天空一秒变黑+网友称像半夜加班)
+1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
+1. [周鸿祎吐槽库里南性价比低](https://so.toutiao.com/search?keyword=周鸿祎吐槽库里南性价比低)
+1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
+1. [加沙一医院乱葬坑又发现35具尸体](https://so.toutiao.com/search?keyword=加沙一医院乱葬坑又发现35具尸体)
+1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
+1. [媒体：印度开启一场几无悬念的大选](https://so.toutiao.com/search?keyword=媒体：印度开启一场几无悬念的大选)
+1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
+1. [俄外长：中俄贸易已几乎实现去美元化](https://so.toutiao.com/search?keyword=俄外长：中俄贸易已几乎实现去美元化)
+1. [媒体评高校禁止学生宿舍悬挂床帘](https://so.toutiao.com/search?keyword=媒体评高校禁止学生宿舍悬挂床帘)
+1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
+1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
+1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
+1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
+1. [穆雷末节8中6射落14分](https://so.toutiao.com/search?keyword=穆雷末节8中6射落14分)
+1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
+1. [大V评干部阻止村民种地：野蛮做法](https://so.toutiao.com/search?keyword=大V评干部阻止村民种地：野蛮做法)
+1. [评论员：床帘守护的是大学生的隐私](https://so.toutiao.com/search?keyword=评论员：床帘守护的是大学生的隐私)
+1. [洪秀柱：在大陆可找到很多发展机遇](https://so.toutiao.com/search?keyword=洪秀柱：在大陆可找到很多发展机遇)
+1. [美国格斗选手徒手制服2米长鳄鱼](https://so.toutiao.com/search?keyword=美国格斗选手徒手制服2米长鳄鱼)
+1. [台湾地震时天空闪电不停](https://so.toutiao.com/search?keyword=台湾地震时天空闪电不停)
+1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
 1. [黄金两日重挫近4%](https://so.toutiao.com/search?keyword=黄金两日重挫近4%)
 1. [波兰总理回应总统涉部署核武言论](https://so.toutiao.com/search?keyword=波兰总理回应总统涉部署核武言论)
-1. [布林肯将访华 美国的诚意到底在哪](https://so.toutiao.com/search?keyword=布林肯将访华+美国的诚意到底在哪)
-1. [大四男生每天花4小时读纸质书](https://so.toutiao.com/search?keyword=大四男生每天花4小时读纸质书)
-1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
-1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
-1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
-1. [俄外长：中俄贸易已几乎实现去美元化](https://so.toutiao.com/search?keyword=俄外长：中俄贸易已几乎实现去美元化)
-1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
 1. [试驾2024款丰田赛那](https://so.toutiao.com/search?keyword=试驾2024款丰田赛那)
 1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
-1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
 1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
-1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
-1. [美国格斗选手徒手制服2米长鳄鱼](https://so.toutiao.com/search?keyword=美国格斗选手徒手制服2米长鳄鱼)
-1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
-1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [唐山舰厦门舰首次在命名城市靠泊开放](https://so.toutiao.com/search?keyword=唐山舰厦门舰首次在命名城市靠泊开放)
-1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
-1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
 1. [我们为什么要读书](https://so.toutiao.com/search?keyword=我们为什么要读书)
 1. [毛豆小朋友收到北海舰队的暖心礼物](https://so.toutiao.com/search?keyword=毛豆小朋友收到北海舰队的暖心礼物)
 1. [以色列高层或现“辞职潮”](https://so.toutiao.com/search?keyword=以色列高层或现“辞职潮”)
 1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
 1. [美国将派60名军事顾问进入乌克兰](https://so.toutiao.com/search?keyword=美国将派60名军事顾问进入乌克兰)
-1. [媒体评高校禁止学生宿舍悬挂床帘](https://so.toutiao.com/search?keyword=媒体评高校禁止学生宿舍悬挂床帘)
 1. [烟台舰在家乡举行升国旗仪式](https://so.toutiao.com/search?keyword=烟台舰在家乡举行升国旗仪式)
-1. [穆雷末节8中6射落14分](https://so.toutiao.com/search?keyword=穆雷末节8中6射落14分)
 1. [新时代阅读的“N”种打开方式](https://so.toutiao.com/search?keyword=新时代阅读的“N”种打开方式)
 1. [常州副市长抖音评论区成许愿池](https://so.toutiao.com/search?keyword=常州副市长抖音评论区成许愿池)
 1. [男子赶海徒手抓到大活鱼回家就做了](https://so.toutiao.com/search?keyword=男子赶海徒手抓到大活鱼回家就做了)
@@ -61,12 +73,10 @@
 1. [央媒：学生家长殴打母子通报避重就轻](https://so.toutiao.com/search?keyword=央媒：学生家长殴打母子通报避重就轻)
 1. [女儿遭霸凌殴打割喉求生 家长发声](https://so.toutiao.com/search?keyword=女儿遭霸凌殴打割喉求生+家长发声)
 1. [9岁男孩坠亡：生前被老师打手心8次](https://so.toutiao.com/search?keyword=9岁男孩坠亡：生前被老师打手心8次)
-1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
 1. [男童头朝下被马拖行 涉事景区暂停营业](https://so.toutiao.com/search?keyword=男童头朝下被马拖行+涉事景区暂停营业)
 1. [干部拦春耕称上边让我敛钱我就敛钱](https://so.toutiao.com/search?keyword=干部拦春耕称上边让我敛钱我就敛钱)
 1. [斗鱼市值现已蒸发超9成](https://so.toutiao.com/search?keyword=斗鱼市值现已蒸发超9成)
 1. [萌娃手指卡不锈钢筒孔消防成功解救](https://so.toutiao.com/search?keyword=萌娃手指卡不锈钢筒孔消防成功解救)
-1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
 1. [凤凰传奇演唱会消防小哥随音乐摇摆](https://so.toutiao.com/search?keyword=凤凰传奇演唱会消防小哥随音乐摇摆)
 1. [中欧基金辟谣知名基金经理葛兰被抓](https://so.toutiao.com/search?keyword=中欧基金辟谣知名基金经理葛兰被抓)
 1. [中学物理老师“花式”教学走红网络](https://so.toutiao.com/search?keyword=中学物理老师“花式”教学走红网络)
@@ -89,13 +99,11 @@
 1. [主播“小团团”或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播“小团团”或面临3至5年刑期)
 1. [家长堵住男孩教唆自己孩子动手打人](https://so.toutiao.com/search?keyword=家长堵住男孩教唆自己孩子动手打人)
 1. [俄媒：俄乌冲突或于五月迎来新升级](https://so.toutiao.com/search?keyword=俄媒：俄乌冲突或于五月迎来新升级)
-1. [媒体：印度开启一场几无悬念的大选](https://so.toutiao.com/search?keyword=媒体：印度开启一场几无悬念的大选)
 1. [律师解读小团团被捕事件](https://so.toutiao.com/search?keyword=律师解读小团团被捕事件)
 1. [余承东：鸿蒙智行今年已卖10.5万辆](https://so.toutiao.com/search?keyword=余承东：鸿蒙智行今年已卖10.5万辆)
 1. [杭州公安回应周杰伦在演唱会的感谢](https://so.toutiao.com/search?keyword=杭州公安回应周杰伦在演唱会的感谢)
 1. [张康阳分享国米夺意甲第20冠后心情](https://so.toutiao.com/search?keyword=张康阳分享国米夺意甲第20冠后心情)
 1. [掘金两战三分命中率仅30.3%](https://so.toutiao.com/search?keyword=掘金两战三分命中率仅30.3%)
-1. [台湾地震时天空闪电不停](https://so.toutiao.com/search?keyword=台湾地震时天空闪电不停)
 1. [华为鸿蒙智行今年销量中国新势力第一](https://so.toutiao.com/search?keyword=华为鸿蒙智行今年销量中国新势力第一)
 1. [杨幂秦昊新剧首播收视率破0.3](https://so.toutiao.com/search?keyword=杨幂秦昊新剧首播收视率破0.3)
 1. [俄称美核武器若现波兰将被打击](https://so.toutiao.com/search?keyword=俄称美核武器若现波兰将被打击)
@@ -114,7 +122,6 @@
 1. [杨鸣：深圳男篮回到主场肯定要玩命](https://so.toutiao.com/search?keyword=杨鸣：深圳男篮回到主场肯定要玩命)
 1. [官方回应高速不按规定保持车距被罚](https://so.toutiao.com/search?keyword=官方回应高速不按规定保持车距被罚)
 1. [游客景区偷拔19根竹笋遭索罚2600元](https://so.toutiao.com/search?keyword=游客景区偷拔19根竹笋遭索罚2600元)
-1. [评论员：床帘守护的是大学生的隐私](https://so.toutiao.com/search?keyword=评论员：床帘守护的是大学生的隐私)
 1. [收评：沪指缩量调整跌0.74%](https://so.toutiao.com/search?keyword=收评：沪指缩量调整跌0.74%)
 1. [广东九江大桥沉船事故初查原因](https://so.toutiao.com/search?keyword=广东九江大桥沉船事故初查原因)
 1. [日民众发起诉讼要求停止核污水排海](https://so.toutiao.com/search?keyword=日民众发起诉讼要求停止核污水排海)
@@ -148,7 +155,6 @@
 1. [蔡磊说在我倒下之前干掉渐冻症](https://so.toutiao.com/search?keyword=蔡磊说在我倒下之前干掉渐冻症)
 1. [胖东来计划挣2000万结果挣了1.4亿](https://so.toutiao.com/search?keyword=胖东来计划挣2000万结果挣了1.4亿)
 1. [曝蔚来“截胡”小米SU7](https://so.toutiao.com/search?keyword=曝蔚来“截胡”小米SU7)
-1. [大V评干部阻止村民种地：野蛮做法](https://so.toutiao.com/search?keyword=大V评干部阻止村民种地：野蛮做法)
 1. [24日夜间起华南地区雨势将再加强](https://so.toutiao.com/search?keyword=24日夜间起华南地区雨势将再加强)
 1. [券商：关注石油石化等资源板块](https://so.toutiao.com/search?keyword=券商：关注石油石化等资源板块)
 1. [欧盟举办会议聚焦援乌议题](https://so.toutiao.com/search?keyword=欧盟举办会议聚焦援乌议题)
