--- a/archives/toutiao-search/2024-04-23.md
+++ b/archives/toutiao-search/2024-04-23.md
@@ -1,69 +1,81 @@
 # 2024-04-23
 
-共 361 条
+共 371 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 23 2024 22:00:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 23 2024 23:00:35 GMT+0800 (China Standard Time) -->
+1. [交钱种地事发地周边乡镇称也被要钱](https://so.toutiao.com/search?keyword=交钱种地事发地周边乡镇称也被要钱)
+1. [周琦被驱逐](https://so.toutiao.com/search?keyword=周琦被驱逐)
+1. [这些家乡舰“回家”了](https://so.toutiao.com/search?keyword=这些家乡舰“回家”了)
+1. [央媒：禁止宿舍挂床帘有懒政之嫌](https://so.toutiao.com/search?keyword=央媒：禁止宿舍挂床帘有懒政之嫌)
 1. [深圳龙华城管回应“暴雨天浇花”](https://so.toutiao.com/search?keyword=深圳龙华城管回应“暴雨天浇花”)
 1. [失踪多日南充女教师已找到](https://so.toutiao.com/search?keyword=失踪多日南充女教师已找到)
-1. [这些家乡舰“回家”了](https://so.toutiao.com/search?keyword=这些家乡舰“回家”了)
 1. [美国要制裁中国金融机构？中方回应](https://so.toutiao.com/search?keyword=美国要制裁中国金融机构？中方回应)
-1. [工作人员输错号让彩民中800万](https://so.toutiao.com/search?keyword=工作人员输错号让彩民中800万)
-1. [干部阻挠农民种地让交钱被免职](https://so.toutiao.com/search?keyword=干部阻挠农民种地让交钱被免职)
-1. [律师：镇政府干预土地承包严重违法](https://so.toutiao.com/search?keyword=律师：镇政府干预土地承包严重违法)
-1. [央媒：禁止宿舍挂床帘有懒政之嫌](https://so.toutiao.com/search?keyword=央媒：禁止宿舍挂床帘有懒政之嫌)
-1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
-1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [新款广汽丰田赛那上市](https://so.toutiao.com/search?keyword=新款广汽丰田赛那上市)
-1. [广东辟谣绥江河原水水源不足](https://so.toutiao.com/search?keyword=广东辟谣绥江河原水水源不足)
-1. [女中学生为逃霸凌割喉求生 警方回应](https://so.toutiao.com/search?keyword=女中学生为逃霸凌割喉求生+警方回应)
+1. [蔡磊病情加重舌头和下唇已萎缩](https://so.toutiao.com/search?keyword=蔡磊病情加重舌头和下唇已萎缩)
 1. [主播小团团或面临3至5年刑期](https://so.toutiao.com/search?keyword=主播小团团或面临3至5年刑期)
-1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
-1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
-1. [山西26死火灾事故42名公职人员被问责](https://so.toutiao.com/search?keyword=山西26死火灾事故42名公职人员被问责)
-1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
-1. [城管局回应大雨天一绿化车洒水浇树](https://so.toutiao.com/search?keyword=城管局回应大雨天一绿化车洒水浇树)
-1. [大四男生每天花4小时读纸质书](https://so.toutiao.com/search?keyword=大四男生每天花4小时读纸质书)
-1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
-1. [一年不到二度访华 布林肯为何而来](https://so.toutiao.com/search?keyword=一年不到二度访华+布林肯为何而来)
+1. [干部阻挠农民种地让交钱被免职](https://so.toutiao.com/search?keyword=干部阻挠农民种地让交钱被免职)
+1. [工作人员输错号让彩民中800万](https://so.toutiao.com/search?keyword=工作人员输错号让彩民中800万)
 1. [深圳暴雨街道被淹](https://so.toutiao.com/search?keyword=深圳暴雨街道被淹)
-1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
-1. [布林肯将访华 美国的诚意到底在哪](https://so.toutiao.com/search?keyword=布林肯将访华+美国的诚意到底在哪)
-1. [深圳有小区二手房降价60%](https://so.toutiao.com/search?keyword=深圳有小区二手房降价60%)
-1. [王心凌长沙演唱会4月25日开票](https://so.toutiao.com/search?keyword=王心凌长沙演唱会4月25日开票)
-1. [西湖边交警小姐姐温柔劝导路人](https://so.toutiao.com/search?keyword=西湖边交警小姐姐温柔劝导路人)
-1. [深圳天空一秒变黑 网友称像半夜加班](https://so.toutiao.com/search?keyword=深圳天空一秒变黑+网友称像半夜加班)
-1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
+1. [广东辟谣绥江河原水水源不足](https://so.toutiao.com/search?keyword=广东辟谣绥江河原水水源不足)
+1. [凤凰传奇演唱会女歌迷演唱硬控全场](https://so.toutiao.com/search?keyword=凤凰传奇演唱会女歌迷演唱硬控全场)
+1. [男子车位被霸停多天一怒焊死](https://so.toutiao.com/search?keyword=男子车位被霸停多天一怒焊死)
+1. [多地高校禁止学生宿舍挂床帘](https://so.toutiao.com/search?keyword=多地高校禁止学生宿舍挂床帘)
+1. [日元还要跌多久](https://so.toutiao.com/search?keyword=日元还要跌多久)
+1. [国内金价一夜大跌14元/克](https://so.toutiao.com/search?keyword=国内金价一夜大跌14元/克)
+1. [车展探馆：北京BJ40e实车曝光](https://so.toutiao.com/search?keyword=车展探馆：北京BJ40e实车曝光)
+1. [河北一粮企近万吨粮库粮凭空消失](https://so.toutiao.com/search?keyword=河北一粮企近万吨粮库粮凭空消失)
+1. [律师：镇政府干预土地承包严重违法](https://so.toutiao.com/search?keyword=律师：镇政府干预土地承包严重违法)
+1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
+1. [一年不到二度访华 布林肯为何而来](https://so.toutiao.com/search?keyword=一年不到二度访华+布林肯为何而来)
+1. [网红艺考生回应被指北电艺考作弊](https://so.toutiao.com/search?keyword=网红艺考生回应被指北电艺考作弊)
+1. [以军打死黎巴嫩真主党2名高级军官](https://so.toutiao.com/search?keyword=以军打死黎巴嫩真主党2名高级军官)
+1. [城管局回应大雨天一绿化车洒水浇树](https://so.toutiao.com/search?keyword=城管局回应大雨天一绿化车洒水浇树)
 1. [周鸿祎吐槽库里南性价比低](https://so.toutiao.com/search?keyword=周鸿祎吐槽库里南性价比低)
-1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
-1. [加沙一医院乱葬坑又发现35具尸体](https://so.toutiao.com/search?keyword=加沙一医院乱葬坑又发现35具尸体)
-1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
-1. [媒体：印度开启一场几无悬念的大选](https://so.toutiao.com/search?keyword=媒体：印度开启一场几无悬念的大选)
+1. [新北京BJ30e实车曝光](https://so.toutiao.com/search?keyword=新北京BJ30e实车曝光)
+1. [深圳天空一秒变黑 网友称像半夜加班](https://so.toutiao.com/search?keyword=深圳天空一秒变黑+网友称像半夜加班)
+1. [美国格斗选手徒手制服2米长鳄鱼](https://so.toutiao.com/search?keyword=美国格斗选手徒手制服2米长鳄鱼)
+1. [上海三胞胎家庭每月补助1970元](https://so.toutiao.com/search?keyword=上海三胞胎家庭每月补助1970元)
 1. [博主：父亲殴打霸凌者有罪但无错](https://so.toutiao.com/search?keyword=博主：父亲殴打霸凌者有罪但无错)
+1. [我们为什么要读书](https://so.toutiao.com/search?keyword=我们为什么要读书)
+1. [24.98万起 新款AITO问界M5上市](https://so.toutiao.com/search?keyword=24.98万起+新款AITO问界M5上市)
+1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
+1. [学校禁止学生挂床帘是权力越界吗](https://so.toutiao.com/search?keyword=学校禁止学生挂床帘是权力越界吗)
+1. [英国查封6.1万枚比特币](https://so.toutiao.com/search?keyword=英国查封6.1万枚比特币)
+1. [山西26死火灾事故42名公职人员被问责](https://so.toutiao.com/search?keyword=山西26死火灾事故42名公职人员被问责)
+1. [深圳有小区二手房降价60%](https://so.toutiao.com/search?keyword=深圳有小区二手房降价60%)
+1. [专家：美军援改变不了俄乌战场态势](https://so.toutiao.com/search?keyword=专家：美军援改变不了俄乌战场态势)
+1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
+1. [男子照顾孤寡老人十余年继承5套房](https://so.toutiao.com/search?keyword=男子照顾孤寡老人十余年继承5套房)
+1. [波兰总理回应总统涉部署核武言论](https://so.toutiao.com/search?keyword=波兰总理回应总统涉部署核武言论)
+1. [日元持续贬值 中国能抗住金融战吗](https://so.toutiao.com/search?keyword=日元持续贬值+中国能抗住金融战吗)
+1. [哲学硕士拟聘为遗体火化工](https://so.toutiao.com/search?keyword=哲学硕士拟聘为遗体火化工)
+1. [媒体评春耕被拦：有些干部该学法了](https://so.toutiao.com/search?keyword=媒体评春耕被拦：有些干部该学法了)
+1. [西湖边交警小姐姐温柔劝导路人](https://so.toutiao.com/search?keyword=西湖边交警小姐姐温柔劝导路人)
+1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
+1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
+1. [女中学生为逃霸凌割喉求生 警方回应](https://so.toutiao.com/search?keyword=女中学生为逃霸凌割喉求生+警方回应)
+1. [大四男生每天花4小时读纸质书](https://so.toutiao.com/search?keyword=大四男生每天花4小时读纸质书)
+1. [布林肯将访华 美国的诚意到底在哪](https://so.toutiao.com/search?keyword=布林肯将访华+美国的诚意到底在哪)
+1. [王心凌长沙演唱会4月25日开票](https://so.toutiao.com/search?keyword=王心凌长沙演唱会4月25日开票)
+1. [加沙一医院乱葬坑又发现35具尸体](https://so.toutiao.com/search?keyword=加沙一医院乱葬坑又发现35具尸体)
+1. [媒体：印度开启一场几无悬念的大选](https://so.toutiao.com/search?keyword=媒体：印度开启一场几无悬念的大选)
 1. [俄外长：中俄贸易已几乎实现去美元化](https://so.toutiao.com/search?keyword=俄外长：中俄贸易已几乎实现去美元化)
 1. [媒体评高校禁止学生宿舍悬挂床帘](https://so.toutiao.com/search?keyword=媒体评高校禁止学生宿舍悬挂床帘)
-1. [大妈摸猴子屁股致旁边大爷被咬伤](https://so.toutiao.com/search?keyword=大妈摸猴子屁股致旁边大爷被咬伤)
-1. [津巴布韦股市暴跌99%与黄金有关吗](https://so.toutiao.com/search?keyword=津巴布韦股市暴跌99%与黄金有关吗)
-1. [深圳暴雨一小区门口变“黄河”](https://so.toutiao.com/search?keyword=深圳暴雨一小区门口变“黄河”)
-1. [一条小团团确认被捕 涉嫌大额赌博](https://so.toutiao.com/search?keyword=一条小团团确认被捕+涉嫌大额赌博)
 1. [穆雷末节8中6射落14分](https://so.toutiao.com/search?keyword=穆雷末节8中6射落14分)
 1. [贾冰小沈阳于洋狂炫东北大饭包](https://so.toutiao.com/search?keyword=贾冰小沈阳于洋狂炫东北大饭包)
 1. [大V评干部阻止村民种地：野蛮做法](https://so.toutiao.com/search?keyword=大V评干部阻止村民种地：野蛮做法)
 1. [评论员：床帘守护的是大学生的隐私](https://so.toutiao.com/search?keyword=评论员：床帘守护的是大学生的隐私)
 1. [洪秀柱：在大陆可找到很多发展机遇](https://so.toutiao.com/search?keyword=洪秀柱：在大陆可找到很多发展机遇)
-1. [美国格斗选手徒手制服2米长鳄鱼](https://so.toutiao.com/search?keyword=美国格斗选手徒手制服2米长鳄鱼)
 1. [台湾地震时天空闪电不停](https://so.toutiao.com/search?keyword=台湾地震时天空闪电不停)
 1. [媒体评交钱种地：误农时谁也担不起](https://so.toutiao.com/search?keyword=媒体评交钱种地：误农时谁也担不起)
 1. [黄金两日重挫近4%](https://so.toutiao.com/search?keyword=黄金两日重挫近4%)
-1. [波兰总理回应总统涉部署核武言论](https://so.toutiao.com/search?keyword=波兰总理回应总统涉部署核武言论)
 1. [试驾2024款丰田赛那](https://so.toutiao.com/search?keyword=试驾2024款丰田赛那)
 1. [黄金创近两年单日最大跌幅](https://so.toutiao.com/search?keyword=黄金创近两年单日最大跌幅)
 1. [主播小团团被捕 导航语音包怎么办](https://so.toutiao.com/search?keyword=主播小团团被捕+导航语音包怎么办)
 1. [唐山舰厦门舰首次在命名城市靠泊开放](https://so.toutiao.com/search?keyword=唐山舰厦门舰首次在命名城市靠泊开放)
-1. [我们为什么要读书](https://so.toutiao.com/search?keyword=我们为什么要读书)
 1. [毛豆小朋友收到北海舰队的暖心礼物](https://so.toutiao.com/search?keyword=毛豆小朋友收到北海舰队的暖心礼物)
 1. [以色列高层或现“辞职潮”](https://so.toutiao.com/search?keyword=以色列高层或现“辞职潮”)
-1. [斗鱼创始人陈少杰的起伏人生](https://so.toutiao.com/search?keyword=斗鱼创始人陈少杰的起伏人生)
 1. [美国将派60名军事顾问进入乌克兰](https://so.toutiao.com/search?keyword=美国将派60名军事顾问进入乌克兰)
 1. [烟台舰在家乡举行升国旗仪式](https://so.toutiao.com/search?keyword=烟台舰在家乡举行升国旗仪式)
 1. [新时代阅读的“N”种打开方式](https://so.toutiao.com/search?keyword=新时代阅读的“N”种打开方式)
@@ -80,7 +92,6 @@
 1. [凤凰传奇演唱会消防小哥随音乐摇摆](https://so.toutiao.com/search?keyword=凤凰传奇演唱会消防小哥随音乐摇摆)
 1. [中欧基金辟谣知名基金经理葛兰被抓](https://so.toutiao.com/search?keyword=中欧基金辟谣知名基金经理葛兰被抓)
 1. [中学物理老师“花式”教学走红网络](https://so.toutiao.com/search?keyword=中学物理老师“花式”教学走红网络)
-1. [日元持续贬值 中国能抗住金融战吗](https://so.toutiao.com/search?keyword=日元持续贬值+中国能抗住金融战吗)
 1. [大批斗鱼头部主播停播](https://so.toutiao.com/search?keyword=大批斗鱼头部主播停播)
 1. [王思雨晒WCBA总冠军奖杯照](https://so.toutiao.com/search?keyword=王思雨晒WCBA总冠军奖杯照)
 1. [一季度经济超预期为啥普通人感受不到](https://so.toutiao.com/search?keyword=一季度经济超预期为啥普通人感受不到)
@@ -150,7 +161,6 @@
 1. [小猩猩因单独圈养抑郁？园区回应](https://so.toutiao.com/search?keyword=小猩猩因单独圈养抑郁？园区回应)
 1. [深圳全市进入暴雨戒备状态](https://so.toutiao.com/search?keyword=深圳全市进入暴雨戒备状态)
 1. [景区回应猴子被摸屁股咬伤游客](https://so.toutiao.com/search?keyword=景区回应猴子被摸屁股咬伤游客)
-1. [学校禁止学生挂床帘是权力越界吗](https://so.toutiao.com/search?keyword=学校禁止学生挂床帘是权力越界吗)
 1. [中方谈布林肯访华 聚焦五大目标](https://so.toutiao.com/search?keyword=中方谈布林肯访华+聚焦五大目标)
 1. [蔡磊说在我倒下之前干掉渐冻症](https://so.toutiao.com/search?keyword=蔡磊说在我倒下之前干掉渐冻症)
 1. [胖东来计划挣2000万结果挣了1.4亿](https://so.toutiao.com/search?keyword=胖东来计划挣2000万结果挣了1.4亿)
